# MiniKaggle

./: .authenticator_config.yaml  .competition_setting.yaml  .env  .gitignore  Licence.txt  README.md  pyproject.toml  run_steamlit.sh  sample_authenticator_config.yaml
app/: main.py  nav.py  test_notebook_view.py
app/common/: metric.py
app/pages/: account.py  page_02_leaderbord.py  page_03_submission.py  page_04_private_leaderboard.py  page_05_change_teamname.py  page_05_userlist.py
app/src/: database.py  logger_config.py
tool/: sample_make_titanic_competition.py
